:sparkles: Feat : 나의 서재 - 성공한 플랜 조회 구현
- 유저의 성공한 플랜 정보를 확인 할 수 있다.
- 데이터는 역순으로 정렬한다.

Issues : #35
